fix: update backend URLs to Vercel deployment for consistency

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <!-- 🚀 Preconnect to backend for faster API calls -->
-    <link rel="preconnect" href="http://project.3bbddns.com:36145" crossorigin>
-    <link rel="dns-prefetch" href="http://project.3bbddns.com:36145">
+    <link rel="preconnect" href="https://pcru-chatbot-backend-elm8jysae-kriangkrai2018-1681s-projects.vercel.app/" crossorigin>
+    <link rel="dns-prefetch" href="https://pcru-chatbot-backend-elm8jysae-kriangkrai2018-1681s-projects.vercel.app/">
     
     <!-- 🍎 Apple-style meta tags for performance -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=5">
